snowy-server/snowy-sentinel-app/k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowy-sentinel-app
spec:
  template:
    spec:
      containers:
      - name: sentinel
