snowy-server/snowy-sentinel-app/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowy-sentinel-app
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sentinel-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snowy-sentinel-app
            port:
              number: 9002
